# GameOfLife

./: CMakeLists.txt  README.md
core/header/game_of_life/: AbstractGame.hpp  CellState.hpp  Configuration.hpp  GameConwayRules.hpp
core/source/: main.cpp
core/source/game_of_life/: AbstractGame.cpp  GameConwayRules.cpp
